workspaces/geometry/src/snapshots/tiling__geometry__convex_hull__tests__creates_an_empty_convex_hull_from_2_line_segments.snap
---
source: workspaces/tilings/src-rust/tiling/src/geometry/./convex_hull_tests.rs
expression: "ConvexHull::from_line_segments([LineSegment::default(),\nLineSegment::default()].iter())"
---
{
  "points": []
}
