workspaces/geometry/src/snapshots/tiling__geometry__convex_hull__tests__orders_points_correctly_from_line_segments.snap
---
source: workspaces/tilings/src-rust/tiling/src/geometry/./convex_hull_tests.rs
expression: "ConvexHull::from_line_segments(square.line_segments.iter())"
---
{
  "points": [
    {
      "x": -0.7071067811865475,
      "y": 0.7071067811865476,
      "index": 1
    },
    {
      "x": -0.7071067811865477,
      "y": -0.7071067811865474,
      "index": 2
    },
    {
      "x": 0.7071067811865474,
      "y": -0.7071067811865477,
      "index": 3
    },
    {
      "x": 0.7071067811865476,
      "y": 0.7071067811865475,
      "index": 0
    }
  ]
}
